# speciate

./: .CONTRIBUTINGmd  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  GLOSSARY.md  LICENSE  NATS_CONTRACT.md  Performance_Ideas.md  README.md  SPRINT_8_SUMMARY.md  SPRINT_PLAN.md  SPRINT_PLAN_sprint-12-interpolation-perception.md  SPRINT_PLAN_sprint-13-interpolation-perception.md  USER_PLAN.md  bio-features.md  log.jsonl  plan.md  sprints.md
apps/simulation/: AGENTS.md  CLAUDE.md  Cargo.toml  OPTIMIZATION_ROADMAP.md  PERFORMANCE_ANALYSIS.md  PERFORMANCE_README.md  README.md  compare_perception_methods.sh  dhat-heap.json  index.d.ts  index.js  package-lock.json  package.json  profile_spatial_grid.sh  sim_state.toml  test-client.html  test_napi.js  test_select_nth.rs
apps/simulation/benches/: simulation_bench.rs  throttle_comparison.rs
apps/simulation/docs/: TELEMETRY_NAPI_IMPLEMENTATION.md  TELEMETRY_NAPI_PERFORMANCE_ANALYSIS.md  TELEMETRY_PERFORMANCE_VERDICT.md  technical-debt.md
apps/simulation/docs/analysis/: ANALYSIS_SUMMARY.md  ANSWER.md  IMPLEMENTATION_PATCH.md  README.md  THROTTLE_IMPLEMENTATION.md  VISUAL_COMPARISON.txt  throttle-method-comparison.md
apps/simulation/docs/profiling/: cache-metrics-instrumentation.md  flat-2d-array-implementation.md
apps/simulation/examples/: test_json_format.rs  throttle_ecs_perf.rs  throttle_perf.rs
apps/simulation/scripts/: analyze_component_sizes.sh  analyze_throttle_hardware.sh  bench_throttle.sh  check-napi-freshness.sh  measure_phase_a.sh  measure_phase_b.sh  measure_phase_c.sh  perf_baseline.sh  perf_throttle_analysis.sh  run_throttle_test.sh
apps/simulation/snapshots/: .gitignore
apps/simulation/specs/: AGENTS.md  README.md
apps/simulation/specs/behavior/: catatonic-crowd.toml  competing-friends.toml  crowd-navigation-fast-seeker.toml  crowd-navigation.toml  crowd-turn-rate-stress.toml  l1-giant-vs-single-mouse.toml  l1-giant-vs-swarm-6.toml  l1-giant-vs-swarm-7.toml  l1-medium-vs-single-mouse.toml  l1-medium-vs-two-mice.toml  l1-small-vs-tiny.toml  opposing-seekers.toml  seeker-arrival-distances.toml  seeker-arrival-isolated.toml  seeker-with-turn-rate.toml  seekers-reach-same-target.toml  size-variation-stability.toml  turn-rate-obstacle-navigation.toml
apps/simulation/specs/performance/: 100k_medium_sparse.toml  10k-wanderers-world-spread.toml  200k-seekers-world-spread.toml  200k-wanderers-world-spread.toml  many-seekers-world-spread.toml  many-wanderers-dense.toml  many-wanderers-medium-density.toml  many-wanderers-world-spread.toml
apps/simulation/specs/physics/: .gitkeep
apps/simulation/src/: components.rs  config.rs  game_loop.rs  lib.rs  main.rs  runner.rs  simulation.rs  snapshot.rs  snapshot_worker.rs  spawner.rs  state_loader.rs
apps/simulation/src/bench_lab/: budget.rs  crossing_measurement.rs  growth.rs  mod.rs  ramp.rs  report.rs  sampler.rs  stats.rs  sweep.rs  verdict.rs  world.rs
apps/simulation/src/dev_commands/: commands.rs  listener.rs  mod.rs  systems.rs
apps/simulation/src/instrumentation/: hardware_metrics.rs  mod.rs  parallelization.rs  snapshot.rs  windows_metrics.rs
apps/simulation/src/ipc/: command_executor.rs  command_result.rs  commands.rs  mod.rs  sim_command.rs  snapshot_queue.rs  stdin_reader.rs
apps/simulation/src/ipc/bridge/: bevy_app.rs  double_buffer.rs  mod.rs  perception_debug_buffer.rs  telemetry.rs
apps/simulation/src/napi_addon/: mod.rs  simulation_engine.rs
apps/simulation/src/nats/: frame.rs  mod.rs  publisher.rs  systems.rs
apps/simulation/src/network/: messages.rs  mod.rs  websocket.rs
apps/simulation/src/persistence/: mod.rs  snapshot.rs  worker.rs
apps/simulation/src/simulation/: agent_systems.rs  components.rs  mod.rs  queries.rs  resources.rs  sim.rs  systems.rs  tests.rs  tick_controller.rs  timing.rs
apps/simulation/src/simulation/act/: mod.rs
apps/simulation/src/simulation/core/: components.rs  dev_tools.rs  frequency_throttle.rs  mod.rs  simulation.rs  timing.rs  world_bounds.rs
apps/simulation/src/simulation/creatures/: builder.rs  constants.rs  events.rs  mod.rs  spawner.rs  systems.rs
apps/simulation/src/simulation/dna/: mod.rs
apps/simulation/src/simulation/drives/: combine.rs  components.rs  mod.rs  tests.rs  vision.rs
apps/simulation/src/simulation/math/: integration.rs  mod.rs  physics.rs  scenario_tests.rs  steering.rs  unit_interval.rs  vector_ops.rs
apps/simulation/src/simulation/movement/: components.rs  constants.rs  mod.rs  noise.rs  rotation.rs  step.rs  systems.rs  tests.rs
apps/simulation/src/simulation/perception/: mod.rs  (+8 more)
apps/simulation/src/snapshots/: mod.rs  snapshot.rs
apps/simulation/src/state/: loader.rs  mod.rs  snapshot.rs
apps/simulation/src/stdio/: hooks.rs  mod.rs
apps/simulation/src/trials/: director.rs  loader.rs  mod.rs  tests.rs
apps/simulation/tests/: branch_profile.rs  buffer_transfer_benchmark.rs  command_system_integration.rs  crash_repro.rs  debug_wander_test.rs  dev_commands_test.rs  electron_msgpack_compat.rs  hardware_metrics_formulas_test.rs  instrumentation_test.rs  integration_test.rs  l1_performance_test.rs  large_scale_save_load.rs  macro_noop_test.rs  max_wander_distance_test.rs  memory_leak_profile.rs  napi_save_state_integration.rs  napi_select_creature_debug.rs  nats_e2e_test.rs  pause_control.rs  performance_snapshot_integration_test.rs  save_state_cli.rs  save_state_integration.rs  snapshot_cli.rs  snapshot_integration.rs  snapshot_nats_integration.rs  spec_runner.rs  spec_tests.rs  system_timing_validation.rs  telemetry_serialization_benchmark.rs  territory_behavior_test.rs  tick_latency_test.rs  trial_integration.rs
apps/simulation/tests/common/: mod.rs
apps/simulation/tests/specs/: avoidance_behavior.rs  crowd_navigation.rs  mod.rs
apps/simulation/trials/: catatonic-crowd.toml  competing-friends.toml  crowd-navigation-fast-seeker.toml  crowd-navigation.toml  cycling-brain-stress.toml  default-spawn-baseline.toml  many-wanderers--medium-density.toml  many-wanderers-dense.toml  many-wanderers-world-spread.toml  many-wanderers.toml  opposing-seekers-1.toml
(+852 files in other folders)
