[package]
name = "speciate"
version = "0.1.0"
edition = "2021"
authors = ["Speciate Team"]
description = "Server-authoritative AI life simulation with player-driven economy"
license = "MIT"
repository = "https://github.com/anthropics/speciate"

[dependencies]
# Bevy ECS Framework
bevy_ecs = "0.14"
bevy_app = "0.14"

# Logging
log = "0.4"
env_logger = "0.11"

# CLI & Configuration
clap = { version = "4.5", features = ["derive"] }
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"  # JSON for DNA placeholder and trial configs
rmp-serde = "1.3"  # MessagePack serialization for binary snapshots

# Utility
rand = "0.8"
noise = "0.9"  # Perlin noise for locomotion variability
chrono = { version = "0.4", features = ["serde"] }  # Timestamp generation for snapshots
ctrlc = { version = "3.4", features = ["termination"] }  # Signal handling for graceful shutdown
crossbeam = "0.8"  # Lock-free data structures for snapshot queue

[features]
# Enable test helper methods for integration tests
test-helpers = []
# Enable development tools (trial system, command IPC)
default = ["dev-tools"]
dev-tools = []

[dev-dependencies]
os_pipe = "1.2"  # For stdin simulation in command tests

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0

[[bin]]
name = "speciate"
path = "src/main.rs"

# Integration tests that require test-helpers feature
[[test]]
name = "territory_behavior_test"
path = "tests/territory_behavior_test.rs"
required-features = ["test-helpers"]

[[test]]
name = "max_wander_distance_test"
path = "tests/max_wander_distance_test.rs"
required-features = ["test-helpers"]

[[test]]
name = "debug_wander_test"
path = "tests/debug_wander_test.rs"
required-features = ["test-helpers"]

[[test]]
name = "command_system_integration"
path = "tests/command_system_integration.rs"
required-features = ["dev-tools"]

[[test]]
name = "trial_integration"
path = "tests/trial_integration.rs"
required-features = ["dev-tools"]

[[test]]
name = "electron_msgpack_compat"
path = "tests/electron_msgpack_compat.rs"
required-features = ["dev-tools"]
