[package]
name = "speciate"
version = "0.1.0"
edition = "2021"
authors = ["Speciate Team"]
description = "Server-authoritative AI life simulation with player-driven economy"
license = "MIT"
repository = "https://github.com/anthropics/speciate"

[dependencies]
# Bevy ECS Framework
bevy_ecs = "0.14"

# Fast hashing for spatial grid (5x faster than SipHash for integer keys)
rustc-hash = "2.0"
bevy_app = "0.14"
bevy_reflect = "0.14"  # Reflection for automatic component serialization
bevy_scene = "0.14"    # DynamicScene for automatic snapshot serialization

# Logging
log = "0.4"
env_logger = "0.11"

# Configuration
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"  # JSON for DNA placeholder and trial configs
rmp-serde = "1.3"  # MessagePack serialization for binary snapshots

# Utility
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }  # Timestamp generation for snapshots
crossbeam = "0.8"  # Lock-free data structures for snapshot queue
crossbeam-channel = "0.5"  # High-performance MPSC for background IPC writer
rayon = "1.8"  # Data parallelism for movement systems

# NAPI-RS (Node.js Native Addon)
napi = { version = "2.12", features = ["napi4", "serde-json"] }
napi-derive = "2.12"
parking_lot = "0.12"  # Faster mutex for DoubleBuffer

# Development-only dependencies (feature-gated)
perf-event = { version = "0.4", optional = true }  # Hardware performance counters
git2 = { version = "0.18", optional = true }  # Git metadata for snapshots
sysinfo = { version = "0.31", optional = true }  # System metrics (CPU, memory)

[features]
# Enable test helper methods for integration tests
test-helpers = []

# Development tools (trial system, command IPC, performance instrumentation)
# PRODUCTION-SAFE: dev-tools is NOT in default features
# - Production builds: cargo build --release (no dev-tools)
# - Dev builds: cargo build --features dev-tools
default = []
dev-tools = ["dep:perf-event", "dep:git2", "dep:sysinfo"]
napi = []

[build-dependencies]
napi-build = "2.0"

[dev-dependencies]
os_pipe = "1.2"  # For stdin simulation in command tests
tempfile = "3.10"  # Temporary files for snapshot tests
regex = "1.10"  # For system timing validation test
criterion = { version = "0.5", features = ["html_reports"] }  # Performance regression benchmarks

[[bench]]
name = "simulation_bench"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

# Integration tests that require test-helpers feature
[[test]]
name = "territory_behavior_test"
path = "tests/territory_behavior_test.rs"
required-features = ["test-helpers"]

[[test]]
name = "max_wander_distance_test"
path = "tests/max_wander_distance_test.rs"
required-features = ["test-helpers"]

[[test]]
name = "debug_wander_test"
path = "tests/debug_wander_test.rs"
required-features = ["test-helpers"]

[[test]]
name = "command_system_integration"
path = "tests/command_system_integration.rs"
required-features = ["dev-tools"]

[[test]]
name = "trial_integration"
path = "tests/trial_integration.rs"
required-features = ["dev-tools"]
